# compare-poseidon

./: .gitmodules  Cargo.toml  README.md
benches/: poseidon2_comparison.rs  poseidon_comparison.rs
crypto-primitives/crypto-primitives/src/sponge/: mod.rs
