[package]
name = "compare-poseidon"
version = "0.1.0"
edition = "2024"

[dependencies]
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
ark-crypto-primitives =  { path = "./crypto-primitives/crypto-primitives", features = ["sponge", "crh"]}
zkhash = {path = "./poseidon2/plain_implementations"}

ark-ff = "0.5.0"
ark-std = "0.5.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "poseidon_comparison"
harness = false

[[bench]]
name = "poseidon2_comparison"
harness = false